# evm-tools

./: .gitignore  Cargo.toml  config.json
src/: constant.rs  main.rs  model.rs  signer.rs  supply.rs  utils.rs
src/cmd/: create_wallet.rs  mod.rs  supply.rs
wallets/: created_evm_1735506224.csv  private-key.txt
