[package]
name = "evm-tools"
version = "0.1.0"
edition = "2021"
author = "github.com/plvo"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
ethers = { version = "2.0", features = ["rustls"] }
log = "0.4.22"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"